--- a/src/index.html
+++ b/src/index.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>index placeholder</title>
+    <script src="app.js"></script>
 </head>
 <body>
-    <p></p>
+    <p>page structure would go here but we don't need any. look in dev tools console for outputed teach and student</p>
 </body>
 </html>
